# apart-june2026

./: .gitignore  CLAUDE.md  README.md  VERIFICATION_LOG.md  pyproject.toml  rerun_six.sh
cloud/: .fleet_sel_multi_start.txt  .fork_rerun_2b_9b.sh  .fork_retry_box.sh  .fork_scale_launch.sh  .fork_shared_launch.sh  .fork_xeno_launch.sh  .geom_multi_watch.sh  .geom_one_box.sh  .plan_baseline.tsv  .plan_baseline_retry.tsv  .plan_div_multi.tsv  .plan_div_multi_retry5.tsv  .plan_fill_geom.tsv  .plan_fill_geom_70b.tsv  .plan_fill_sel.tsv  .plan_fill_stab.tsv  .plan_geom_multi.tsv  .plan_geometry.tsv  .plan_geometry_retry.tsv  .plan_llama_8b.tsv  .plan_llama_big.tsv  .plan_sel_multi.tsv  .plan_stability.tsv  .plan_stability_retry.tsv  Dockerfile  README.md  RUN_STATE.md  _ssh_target.sh  at_run.sh  at_setup.sh  at_vast.sh  fill_fleet_driver.sh  fleet_big_retry.sh  fleet_destroy.sh  fleet_jobs_run.sh  fleet_launch.sh  fleet_model_run.sh  fleet_monitor_agent.sh  fleet_run.sh  fleet_sizing.py  (+26 more)
cloud/shared_bases/: chosen.json  clasismo.json  genero.json  racismo.json  xenofobia.json
configs/prompt_datasets/: cityhousing.json  saving.json  test_minimal.json
configs/scenarios/: example.yaml
datasets/: README.md
experiment/: README.md  shard_output_paths.py
experiment/baseline/: old_data_parser_free_figures.py  reparse_old_thinking_labels.py
experiment/bias/: bias_alignment_accuracy_figure.py  bias_model_style.py  bias_segments.py  combined_old_new_bias_figure.py  plot_bias_alignment_figure.py  stability_readout_join.py
experiment/common/: __init__.py  plain_language_labels.py  sweep_models.py
experiment/forking/: EXPLANATION.md  README.md  analyze_forking_dynamics.py  base_trajectory_tables.py  collect_forking_rollouts.py  collect_forking_shard.py  decode_forking_base_path.py  forced_answer_dynamics.py  forced_fork_size_sweep_figure.py  forced_vs_sampled_figure.py  forking_dynamics_grid_figure.py  forking_item_io.py  forking_plot_styles.py  merge_forking_shards.py  plot_forking_commit_dynamics.py  plot_forking_comparison.py  plot_forking_dynamics.py  render_branching_tree.py  select_forking_item.py  shared_base_grid_figure.py
experiment/generate/: build_stability_datasets.py  generate_prompt_dataset.py
experiment/stability/: __init__.py  collect_stability_samples.py  combined_invariance_figure.py  cot_language_figure.py  degenerate_check.py  greedy_readout_schema.py  merge_shards.py  new_sweep_baseline_stability_figures.py  run_greedy_readout.py  run_vllm_readout.py  sample_ranking_export.py  smallest_vs_biggest_format_invariance.py  stability_abstention_plot.py  stability_metrics_helpers.py  stability_permutation_grid.py  stability_plot_style.py  stability_sensitivity_plot.py  unparseable_rate_figure.py  visualize_stability_samples.py
mental_risk/: README.md  framing_ranking.py  risk_prediction.py  risk_sample_io.py  scaffolds_risk.py  subject_resolution.py
mental_risk/baseline/: collect_baseline_risk.py  collect_llm_responses.py  generate_prompt_dataset.py  visualize_baseline_risk.py  visualize_llm_responses.py
mental_risk/divergence/: collect_divergence_risk.py  visualize_divergence_risk.py
mental_risk/generate/: generate_risk_prompt_datasets.py
mental_risk/geometry/: analyze_geometry_risk.py  collect_geometry_risk.py  geometry_page_risk.py  geometry_viz_server_risk.py  visualize_geometry_risk.py  visualize_geometry_risk.sh
mental_risk/selection/: collect_selection_risk.py  visualize_selection_risk.py
mental_risk/stability/: collect_stability_risk.py  visualize_stability_risk.py
paper/: .gitignore  REWRITE_CONTRACT.md  build.sh  main.tex  paperdefs-common.tex  references.bib
paper/appendix/: baseline.tex  cross_model.tex  divergence.tex  dynamics.tex  full_data.tex  generated_figures.tex  geometry.tex  index.tex  model_scale.tex  scaffolding.tex  selection.tex  stability.tex  steering.tex
paper/sections/: bias.tex  code_and_data.tex  conclusion.tex  discussion.tex  introduction.tex  limitations.tex  methods.tex  problem.tex  related_work.tex  results.tex  stability.tex  table_base_trajectories.tex  table_forking_trajectories.tex  uncertainty.tex
sesgo/: README.md  scaffolds.py
sesgo/baseline/: analyze_geometry.py  baseline_accuracy_slices.py  baseline_full_axis_plots.py  baseline_full_axis_slices.py  baseline_plot_palette.py  baseline_role_prob_plot.py  baseline_sample_plots.py  baseline_scaleup_outcome_mosaic.py  bias_alignment_accuracy_figure.py  bias_alignment_group_labels.py  bias_alignment_points_b.py  bias_alignment_redesign_b.py  bias_alignment_segments.py  bias_group_labels_b.py  bias_legend_layout_b.py  collect_baseline_samples.py  collect_divergence_samples.py  collect_geometry_samples.py  collect_llm_responses.py  collect_selection_samples.py  collect_stability_samples.py  combine_baseline_full_shards.py  combine_full_data_shards.py  cross_model_aggregation.py  cross_model_disambig_scaling_figure.py  cross_model_distribution_builder.py  cross_model_distribution_stats.py  cross_model_outcome_plots.py  cross_model_plot_styles.py  cross_model_plotting.py  cross_model_spread_plots.py  disambig_wording_cells.py  family_shade_palette_b.py  full_data_axis_plots.py  full_data_axis_slices.py  full_data_breakdown_plots.py  generate_prompt_dataset.py  geometry_viz_server.py  run_baseline_bias_alignment.py  run_baseline_bias_redesign_b.py  (+16 more)
sesgo/divergence/: build_divergence_tree.py  collect_divergence_samples.py  combine_divergence_shards.py  divergence_accuracy_panels.py  divergence_breakdown_panels.py  divergence_default_panels.py  divergence_item_metrics.py  divergence_plot_styles.py  divergence_spread_panels.py  thinking_belief_agreement_scatter.py  thinking_contrast_metrics.py  thinking_contrast_panels.py  visualize_divergence_samples.py
sesgo/forking/: EXPLANATION.md  README.md  (+7 more)
src/: __init__.py
streams/: README.md
tasks/: cloud_commander_todo.md  divergence_rescope_todo.md  forking_dynamics_todo.md  geom_multi_todo.md  lessons.md  todo.md
tests/: test_data_manager.py  test_imports.py
utils/: generate_samples_with_activation.py
(+250 files in other folders)
