[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-manifolds"
version = "0.1.0"
description = "Experiments on the geometric structure of LLM residual-stream activations under temporal/planning-horizon phrasings."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "latents @ git+https://github.com/justinshenk/latents.git@257924b49ee5cc95c7e818d011d99a05bf875705",
    "huggingface-hub>=0.31.0",
    # torch >= 2.4 required by transformers 5.x; matches the working
    # temporal-awareness environment (torch 2.9.x on Apple Silicon).
    "torch>=2.4.0",
    # transformer_lens 3.x (beta) is required for transformers 5.x
    # compatibility; 2.x crashes on the removed TRANSFORMERS_CACHE attribute.
    "transformer_lens>=3.0.0b3",
    "transformers>=5.0.0",
    "nnsight>=0.6.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "plotly>=6.5.1",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "black>=24.0", "nbstripout>=0.7"]
api = ["openai>=1.0.0", "anthropic>=0.25.0"]
# Manifold-projection deps. Heavy build (llvmlite); install only when needed
# for experiments 03/06.
viz = ["umap-learn>=0.5.11", "pacmap>=0.9.1"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.uv]
prerelease = "allow"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
# Mirrors temporal-awareness: pragmatic ignores for inherited research code
ignore = [
    "E741",   # ambiguous variable name (l, I, O) — common for layers/indices
    "E402",   # module-level import not at top — scripts bootstrap sys.path first
    "F403",   # star imports — used in __init__.py re-export pattern
    "F405",   # may be undefined from star import — companion to F403
    "F841",   # unused variable — common in research code
    "E501",   # line too long — handled by formatter
    "E731",   # lambda assignment — inline filter functions
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]
"src/**/__init__.py" = ["F401", "F811"]  # re-exports
"src/common/math/entropy_diversity/entropy_primitives.py" = ["F401"]  # re-exports _EPS

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
